# agentic-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  decisions.md  pyproject.toml  render.yaml  test_results.md
docs/: diagrams.md
src/resource_constrained_agent/: __init__.py  agent.py  budget.py  cli.py  harness.py  providers.py  schemas.py  settings.py  tools.py  web.py
tests/: test_agent.py  test_budget.py  test_providers.py  test_tools.py  test_web.py
